Letencrypt/Ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress
metadata:
  name: nginx-ingress1
  annotations:
    cert-manager.io/issuer: "letsencrypt-staging"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - www.simplek8s.com 
    secretName: quickstart-example-tls
  rules:
  - host: www.simplek8s.com 
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: web1-service
            port:
              number: 80
